# pretix-shop-analytics

./: MANIFEST.in  README.md  setup.cfg
pretix_shop_analytics/: apps.py  forms.py  signals.py  tasks.py  urls.py  views.py
pretix_shop_analytics/static/pretix_shop_analytics/: bootstrap.js
pretix_shop_analytics/templates/pretix_shop_analytics/: settings.html
tests/: conftest.py  settings.py  test_forms.py  test_signals.py  test_tasks.py  test_views.py
