[metadata]
name = pretix-shop-analytics
version = 0.1.0
description = pretix plugin that forwards shop/cart/checkout events to a configurable analytics endpoint (Umami by default), preserving an anonymous visitor UUID from the referring website.
long_description = file: README.md
long_description_content_type = text/markdown
author = fraktvred
license = Apache Software License

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    pretix
    requests

[options.entry_points]
pretix.plugin =
    pretix_shop_analytics = pretix_shop_analytics

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
addopts = --reuse-db
testpaths = tests
pythonpath = .
